--- a/rakefile
+++ b/rakefile
@@ -1,6 +1,7 @@
 $LOAD_PATH.unshift(File.expand_path('../.', __FILE__))
 require 'pry'
 require 'install'
+require 'yaml'
 
 namespace :install do
   task :default do
